Fix eat logo broken on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ section.credit-card{font-size: 18px;padding: 30px 0;}
   .table-responsive {width: 100%; margin-bottom: 15px; overflow-x: auto; overflow-y: hidden; -webkit-overflow-scrolling: touch; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid #ddd; }
 }
 @media screen and (max-width: 767px){
-  .navbar-header{margin-right: 0;margin-left: 0;float: left;}
+  .navbar-header{margin-right: 0!important;margin-left: 0!important;float: left;}
   .navbar-nav {float: left; margin: 0; }
   .container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse{margin-left: -15px;margin-right: -15px;}
   .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {margin-left: -15px; }
